5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1799_2575.log
== TEST (2019-07-03 11:28:28) 
-- CODE:
from numpy import

a=array(eval(input()), dtype=str)
b=zeros(3, dtype=int)
n=0
t=0
y=0
for i in range(size(a)):
	if (a[i].upper()=="NETFLIX"):
		n+=1
	elif (a[i].upper()=="TV"):
		t+=1
	elif (a[i].upper()=="YOUTUBE"):
		y+=1
b[0]=t
b[1]=n
b[2]=y
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 11:28:38) 
-- CODE:
a=array(eval(input()), dtype=str)
b=zeros(3, dtype=int)
n=0
t=0
y=0
for i in range(size(a)):
	if (a[i].upper()=="NETFLIX"):
		n+=1
	elif (a[i].upper()=="TV"):
		t+=1
	elif (a[i].upper()=="YOUTUBE"):
		y+=1
b[0]=t
b[1]=n
b[2]=y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array(eval(input()), dtype=str)
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 11:28:53) 
-- CODE:
from numpy import*

a=array(eval(input()), dtype=str)
b=zeros(3, dtype=int)
n=0
t=0
y=0
for i in range(size(a)):
	if (a[i].upper()=="NETFLIX"):
		n+=1
	elif (a[i].upper()=="TV"):
		t+=1
	elif (a[i].upper()=="YOUTUBE"):
		y+=1
b[0]=t
b[1]=n
b[2]=y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 11:29:23) 
-- CODE:
from numpy import*

a=array(eval(input()), dtype=str)
b=zeros(3, dtype=int)
n=0
t=0
y=0
for i in range(size(a)):
	if (a[i].upper()=="NETFLIX"):
		n+=1
	elif (a[i].upper()=="TV"):
		t+=1
	elif (a[i].upper()=="YOUTUBE"):
		y+=1
b[0]=t
b[1]=n
b[2]=y
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 11:29:48) 
-- CODE:
from numpy import*

a=array(eval(input()), dtype=str)
b=zeros(3, dtype=int)
n=0
t=0
y=0
for i in range(size(a)):
	if (a[i].upper()=="NETFLIX"):
		n+=1
	elif (a[i].upper()=="TV"):
		t+=1
	elif (a[i].upper()=="YOUTUBE"):
		y+=1
b[0]=t
b[1]=n
b[2]=y
print(b)
-- EXECUTION TIME:
1.13572
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
